* Applied patch by Adrian to fix the command structures used for the media   server with GCC4 in a GCC2 system (and vice versa). See #4920 which this   patch closes, too.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@33997 a95241bf-73f2-0310-859d-f6bbb57e9c96